stop forcing cjs mode in nodejs

--- a/packages/connect/package.json
+++ b/packages/connect/package.json
@@ -24,7 +24,7 @@
   "exports": {
     ".": {
       "node": {
-        "import": "./dist/proxy/index.js",
+        "import": "./dist/esm/index.js",
         "require": "./dist/cjs/index.js"
       },
       "module": "./dist/esm/index.js",
